--- a/styles/scss/_hamburger.scss
+++ b/styles/scss/_hamburger.scss
@@ -6,6 +6,7 @@
   cursor: pointer;
   box-sizing: content-box;
   padding: 5px;
+  top: 20px;
 }
 
 .line {
